--- a/nginx/conf.d/nginx.conf
+++ b/nginx/conf.d/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name localhost;
 
-    root /var/www/public;  # Loyihangizning public papkasi
+    root /var/www/public;  
     index index.php index.html;
 
     location / {
@@ -10,13 +10,13 @@ server {
     }
 
     location ~ \.php$ {
-        include fastcgi_params;  # FastCGI parametrlarini kiritish
-        fastcgi_pass php:9000;   # PHP-FPM bilan aloqani o'rnatish
-        fastcgi_index index.php; # PHP uchun asosiy fayl
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;  # To'g'ri fayl yo'li
+        include fastcgi_params;  
+        fastcgi_pass php:9000;   
+        fastcgi_index index.php; 
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name; 
     }
 
     location ~ /\.ht {
-        deny all;  # .htaccess fayllarini bloklash
+        deny all;  
     }
 }
