--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,17 +4,17 @@ services:
   nginx:
     image: nginx:latest
     volumes:
-      - ./:/var/www           # Loyihaning barcha fayllarini /var/www ga ulash
+      - ./:/var/www           
       
-      - ./nginx/conf.d:/etc/nginx/conf.d  # Nginx konfiguratsiyasini ulash
+      - ./nginx/conf.d:/etc/nginx/conf.d  
     ports:
-      - "8083:80"  # Hostdagi 8083 portini Nginxning 80 portiga ulash
+      - "8083:80"  
     depends_on:
-      - php   # PHP servisi Nginxdan oldin ishga tushadi
+      - php  
 
   php:
     image: php:8.2-fpm
     volumes:
-      - ./:/var/www  # Loyihaning barcha fayllarini /var/www ga ulash
+      - ./:/var/www 
     expose:
-      - "9000"  # PHP-FPM portini ochish (Nginx ulanishi uchun)
+      - "9000"  
